[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismoai-io-mani"
version = "0.1.0"
description = "Seismic data IO toolkit for SeismoAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "segyio",
    "numpy",
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]